2011-12-0 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFSet.c:
	* Headers/CoreFoundation/CFSet.h:
	* Source/GNUmakefile: New CFSet based on CFBag.
	* Source/CFBag.c:
	* Headers/CoreFoundation/CFBag.h: Fixed copy-and-paste error.
	* Source/GSHashTable.h:
	* Source/GSHashTable.c: Fixed definition of GSHashTableRemoveValue().

2011-12-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBag.c:
	* Headers/CoreFoundation/CFBag.h: Added CFBag.  Code is based on
	CFDicitonary implementation.

2011-12-07 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/Identifiers.m:
	* Source/GNUmakefile:
	* Source/CFDateFormatter.c:
	* Headers/CoreFoundation/CFDateFormatter.h: Added CFDateFormatter
	skeleton.

2011-12-07 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.c: Cleaned up CFArrayReplaceValue() and had 
	other functions call it to insert, remove, etc.
	* Source/CFNumber.c: Added description function.

2011-12-06 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/objc_interface.h:
	* Source/atomic_ops.h:
	* Source/callbacks.h:
	* Source/threading.h:
	* Source/GSPrivate.h:
	* Source/CFError.c:
	* Source/CFArray.c:
	* Source/CFTimeZone.c:
	* Source/CFDictionary.c:
	* Source/CFCalendar.c:
	* Source/CFBase.c:
	* Source/CFStringEncoding.c:
	* Source/CFStringFormat.c:
	* Source/CFNumber.c:
	* Source/CFLocale.c:
	* Source/CFData.c:
	* Source/CFDate.c:
	* Source/CFRuntime.c: Replaced four different header files with 
	GSPrivate.h.
	* Source/CFString.c: Cleaned up.

2011-12-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c: Clean up.

2011-12-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: Don't use libicu to create locale identifier.

2011-12-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: Clean up.

2011-12-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSHashTable.c:
	* Source/GSHashTable.h: Add new function to copy hash tables.
	* Source/CFDictionary.c: Use new GSHashTable functions.