@@ -1,5 +1,12 @@
 2011-12-0 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Source/CFCalendar.c:
+	* Source/CFDate.c:
+	* Source/GSPrivate.h: Moved UDate to CFAbsoluteTime conversion macro.
+	* Source/CFDateFormatter.c: Added implementation to most functions.
+
+2011-12-0 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/CFSet.c:
 	* Headers/CoreFoundation/CFSet.h:
 	* Source/GNUmakefile: New CFSet based on CFBag.
